--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ dependencies {
     // The production code uses the SLF4J logging API at compile time
     compile 'org.slf4j:slf4j-api:1.7.21'
     compile group: 'com.google.guava', name: 'guava', version: '19.0'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.8.4'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.4'
 
 
     // Declare the dependency for your favourite test framework you want to use in your tests.
