--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,9 @@
 
 // Apply the java plugin to add support for Java
 apply plugin: 'java'
+apply plugin: 'application'
+
+mainClassName='com.jking31cs.MainDriver'
 
 // In this section you declare where to find the dependencies of your project
 repositories {
