--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     compile group: 'com.google.guava', name: 'guava', version: '19.0'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.8.4'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.4'
+    compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-guava', version: '2.8.4'
 
 
     // Declare the dependency for your favourite test framework you want to use in your tests.
