--- a/build.gradle
+++ b/build.gradle
@@ -9,9 +9,6 @@
 
 // Apply the java plugin to add support for Java
 apply plugin: 'java'
-apply plugin: 'application'
-
-mainClassName=getProperty("mainClass")
 
 // In this section you declare where to find the dependencies of your project
 repositories {
@@ -35,4 +32,30 @@ dependencies {
     // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
     // 'test.useTestNG()' to your build script.
     testCompile 'junit:junit:4.12'
+}
+
+task runPokemonAmalysis (dependsOn: 'classes', type: JavaExec) {
+    main = 'com.jking31cs.PokemonPerformanceAnalysis'
+    classpath = sourceSets.main.runtimeClasspath
+    if (System.getProperty("exec.args") != null) {
+        args System.getProperty("exec.args").split()
+    }
+}
+
+task runMoveAnalysis (dependsOn: 'classes', type: JavaExec) {
+    main = 'com.jking31cs.PokemonMoveCountAnalysis'
+    classpath = sourceSets.main.runtimeClasspath
+}
+
+task runNextMoveAnalysis (dependsOn: 'classes', type: JavaExec) {
+    main = 'com.jking31cs.PokemonAnalysis'
+    classpath = sourceSets.main.runtimeClasspath
+}
+
+task runDataGenerator (dependsOn: 'classes', type: JavaExec) {
+    main = 'com.jking31cs.DataGenerationDriver'
+    classpath = sourceSets.main.runtimeClasspath
+    if (System.getProperty("exec.args") != null) {
+        args System.getProperty("exec.args").split()
+    }
 }
